--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
+
 <app-header></app-header>
 <div class="main-content">
     <router-outlet></router-outlet> <!-- treatment goes through this --> 
