--- a/front-end/src/app/quizzes/quiz-list-staff/quiz-list-staff.component.html
+++ b/front-end/src/app/quizzes/quiz-list-staff/quiz-list-staff.component.html
@@ -3,7 +3,10 @@
 <br>
 <!-- put in a bootstrap modal -->
 <!-- button: "Nouveau quiz" to triger it-->
-<app-quiz-form class="quiz-form"></app-quiz-form>
+<!--<app-quiz-form class="quiz-form"></app-quiz-form>-->
+<button class="button-card new" routerLink= "/edit-quiz">
+    Nouveau Quiz <i class="fas fa-plus-circle"></i>
+</button>
 <div class="quiz-list">
     <div class="card quiz fixed-container" *ngFor="let quiz of quizList">
         <button class="button-card delete" (click)="deleteQuiz(quiz)">
