--- a/front-end/src/app/start/staff/staff.component.html
+++ b/front-end/src/app/start/staff/staff.component.html
@@ -1,7 +1,7 @@
 <button class="button-card" routerLink= "/home">Retour</button>
 <button class="button-card" routerLink= "/home">Home</button>
 
-<div class="buttons-duo">
+<div class="buttons-duo center">
     <button class="button-card button-big" routerLink= "./quiz-list">Liste des Quiz</button>
     <button class="button-card button-big" routerLink= "./user-list">Liste des Accueillis</button>
 </div>
