--- a/front-end/src/styles/card.scss
+++ b/front-end/src/styles/card.scss
@@ -7,7 +7,7 @@
   margin: 1rem;
   position: relative;
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
-  padding: 0 1em 1em 1em;
+  padding: 0;//0 1em 1em 1em;
 }
 
 .button-card {
@@ -29,7 +29,7 @@
 }
 
 .button-big {
-  font-size: 500%;
+  font-size: 300%;
   margin-top: 5%;
   width: 100%;
   height: 100%;
