--- a/front-end/src/app/quizzes/edit-question/edit-question.component.html
+++ b/front-end/src/app/quizzes/edit-question/edit-question.component.html
@@ -45,7 +45,7 @@
     
     <!--<button id = "deleteQuestion" class="button-card" (click)="deleteQuestion()"> Supprimer la question</button>-->
 
-    <button id = "submitQuestion" class="button-card" (click)="submitAll()">Tout enregistrer (Ne pas cliquer dessus!^^)</button>
+    <button id = "submitQuestion" class="button-card" (click)="submitQuestionLabel()">Tout enregistrer (n'enregistre pas tout encore)</button>
     <button id = "cancelAll" class="button-card" (click)="resetAll()">Tout annuler</button>
 
 </div>
