--- a/front-end/src/app/users/edit-user/edit-user.component.scss
+++ b/front-end/src/app/users/edit-user/edit-user.component.scss
@@ -1,2 +1,10 @@
 @import '../../../styles/card.scss';
 @import '../../../styles/images.scss';
+
+.user{
+    text-align: center;
+}
+
+.input-custom{
+    margin-left: 1em;
+}
