--- a/front-end/src/app/users/user-list/user-list.component.html
+++ b/front-end/src/app/users/user-list/user-list.component.html
@@ -7,8 +7,9 @@
         <button class="button-card delete" (click)="deleteUser(user)">
             <i class="fas fa-times"></i>
         </button>
-        <button class="button-card user"><!-- routerLink= "/edit-user/{{user.id}}">-->
+        <button class="button-card user">
             <app-user [user]="user" (userDeleted) = "deleteUser($event)"></app-user>
+            <button routerLink= "/edit-user/{{user.id}}">Modifier</button>
         </button>
     </div>
 </div>
