--- a/front-end/src/app/quizzes/question/question.component.html
+++ b/front-end/src/app/quizzes/question/question.component.html
@@ -1,7 +1,9 @@
 
 <div *ngIf = "question" class="card">
     {{question.label}}
-    <div *ngIf="image.url"class="frame"><img class="thumbnail" [src]="getImgSrc()" alt="question image"></div>
+    <div *ngIf="image.url"class="frame">
+        <img class="thumbnail" [src]="imageService.getImgSrc1(image)" alt="question image">
+    </div>
     <div *ngIf = "question.answers"> {{question.answers.length}} réponses disponibles</div>
     <button id = "modifyQuestion" class="button-card" routerLink= "/edit-quiz/{{quiz.id}}/{{question.id}}">Modifier</button>
     <button id = "deleteQuestion" class="button-card" (click)="deleteQuestion()">Supprimer</button>
