--- a/front-end/src/app/users/edit-user/edit-user.component.scss
+++ b/front-end/src/app/users/edit-user/edit-user.component.scss
@@ -8,3 +8,19 @@
 .input-custom{
     margin-left: 1em;
 }
+
+.imageAndButton{
+    display: flex;
+}
+.frame{
+    margin-left: 1em;;
+}
+
+#chargerImage {
+    border-radius: 1em;
+}
+
+.label {
+    padding-top: 5%;
+    text-align: center;
+}
