--- a/front-end/src/app/gallery/gallery.component.html
+++ b/front-end/src/app/gallery/gallery.component.html
@@ -2,6 +2,8 @@
 
 <div class="responsive-list">
     <div *ngFor="let img of images">
-        <div *ngIf="img.url" class="frame-list"><img class="thumbnail" [src]="getImgSrc(img)" (click)="selectedImg(img.id)" alt="answer image"></div>
+        <div *ngIf="img.url" class="frame">
+            <!--Todo  : deleteImage mais ATTENTION : VERIFIER NON UTILISEE-->
+            <img class="thumbnail" [src]="imageService.getImgSrc1(img)" (click)="selectedImg(img.id)" alt="answer image"></div>
     </div>
 </div>
