--- a/front-end/src/app/users/user-form/user-form.component.scss
+++ b/front-end/src/app/users/user-form/user-form.component.scss
@@ -1,21 +1,32 @@
 @import '../../../styles/card.scss';
+@import '../../../styles/images.scss';
 
-.hidden {
-    opacity: 0;
-    position: absolute;
-    z-index: -1;
-}
-
-.label {
-    //margin-top: 0.5em;
-    margin-top: 0.3em;
-}
 
 .image {
     float: right;
     //width: 30%;//50%
 }
+.user{
+    text-align: center;
+}
 
-.buttons-bottom {
-    margin-top: 1em;
+.input-custom{
+    margin-left: 1em;
+}
+
+.imageAndButton{
+    display: flex;
+}
+
+.frame{
+    margin-left: 1em;;
+}
+
+#chargerImage {
+    border-radius: 1em;
+}
+
+.label {
+    padding-top: 5%;
+    text-align: center;
 }
