--- a/front-end/src/app/users/user-list/user-list.component.html
+++ b/front-end/src/app/users/user-list/user-list.component.html
@@ -9,7 +9,7 @@
         </button>
         <button class="button-card user">
             <app-user [user]="user" (userDeleted) = "deleteUser($event)"></app-user>
-            <button routerLink= "/edit-user/{{user.id}}">Modifier</button>
+            <button class = "button-card" routerLink= "/edit-user/{{user.id}}">Modifier</button>
         </button>
     </div>
 </div>
