--- a/front-end/src/app/users/user/user.component.html
+++ b/front-end/src/app/users/user/user.component.html
@@ -1,4 +1,6 @@
-<div>
+<div *ngIf = "user">
     <h1 id="username">{{user.name}}</h1>
-    <div *ngIf = "image.url" class="frame"><img class="thumbnail" [src]="displayImage()" alt="user image"></div>
+    <div *ngIf = "image.url" class="frame">
+        <img class="thumbnail" [src]="imageService.sanitize(this.image.url)" alt="user image">
+    </div>
 </div>
