--- a/front-end/src/app/quizzes/quiz-list-staff/quiz-list-staff.component.html
+++ b/front-end/src/app/quizzes/quiz-list-staff/quiz-list-staff.component.html
@@ -5,9 +5,10 @@
 <!-- button: "Nouveau quiz" to triger it-->
 <!--<app-quiz-form class="quiz-form"></app-quiz-form>-->
 <div class="newQuiz">
-<button class="button-card" routerLink= "/edit-quiz">
-    Nouveau Quiz <i class="fas fa-plus-circle"></i>
-</button>
+<button class="button-card" (click) = "switchShowQuizForm(true)">Ajouter un nouveau Quiz <i class="fas fa-plus-circle"></i></button>
+<div *ngIf = "showQuizForm">
+    <app-quiz-form (quitForm) = "switchShowQuizForm(false)"></app-quiz-form>
+</div>
 </div>
 
 <div class="quiz-list">
