--- a/front-end/src/app/quizzes/theme-form/theme-form.component.html
+++ b/front-end/src/app/quizzes/theme-form/theme-form.component.html
@@ -1,7 +1,8 @@
 <form [formGroup]="themeForm">
     <label>
-        Nouveau
+        Nouveau thème : 
         <input type="text" [formControlName]="'name'">
     </label>
     <button class="button-card" type="submit" (click) = "saveTheme()">Ok</button>
+    <button class = "button-card" (click) = "cancel()">Annuler</button>
 </form>
